# fast_caustic_design

./: .dockerignore  .gitignore  AGENTS.md  CMakeLists.txt  Dockerfile  README.md  cloud_runner.py  dispatcher_example.js  requirements.txt
.github/: copilot-instructions.md
apps/: caustic_design.cpp
apps/common/: generic_tasks.cpp
apps/normal_integration/: mesh.cpp  mesh.h
otlib/: cuda_backend.cu  cuda_backend.h  cuda_backend_stub.cpp  otsolver_trianglemesh.cpp  otsolver_trianglemesh.h
otlib/utils/: mesh_utils.cpp  mesh_utils.h
terraform/: main.tf  outputs.tf  variables.tf
tests/: CausticTemplate.blend  blender_caustic_panel.py  renderBlender.py  target_points.txt  test_workflow.sh  winblender.sh
tests/caustic_lens_renderer/: __init__.py  blender_manifest.toml  package_addon.sh
